--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,15 @@ a {
   text-decoration: none;
 }
 
-#button {
+#button:link {
+  margin-top: 2px;
   padding: 15px 32px 15px 32px;
   background-color: #516FDD;
   border-radius: 50px;
+}
+
+#button:hover {
+  margin-top: 0px;
+  font-size: 105%;
+  padding: 17px 34x 17px 34px;
 }
