--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
+html {
+  height: 100%;
+}
+
 body {
   background-image: url(https://bankjoy.com/assets/images/backgrounds/background.jpg);
   background-position: top;
   background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
   color: white;
   font-family: 'Century Gothic';
