--- a/styles.css
+++ b/styles.css
@@ -3,27 +3,27 @@ html {
 }
 
 body {
+  font-family: 'Century Gothic';
+  color: #fff;
+  text-align: center;
   background-image: url(https://bankjoy.com/assets/images/backgrounds/background.jpg);
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
-  text-align: center;
-  color: white;
-  font-family: 'Century Gothic';
 }
 
 #container {
   position: fixed;
-  width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(61,70,100,.86);
 }
 
 #contact {
-  text-align: right;
   margin: 28px;
+  text-align: right;
 }
 
 .contact-link {
@@ -40,32 +40,32 @@ body {
 .lnr-envelope {
   position: relative;
   top: 1px;
-  font-size: 20px;
   margin-right: 3px;
+  font-size: 20px;
 }
 
 #contact a:hover {
-  color: #516FDD;
+  color: #516fdd;
 }
 
 #title {
   height: 75px;
-  background-image: url(https://bankjoy.com/assets/images/logos/logo-light@2x.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 240px;
   margin-top: 25px;
+  background-image: url(https://bankjoy.com/assets/images/logos/logo-light@2x.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 240px;
 }
 
 #slogan {
-  font-size: 48px;
   margin-bottom: 25px;
+  font-size: 48px;
 }
 
 #content {
-  text-transform: uppercase;
-  font-size: 12px;
   margin-bottom: 65px;
+  font-size: 12px;
+  text-transform: uppercase;
 }
 
 #phones {
@@ -79,39 +79,39 @@ body {
 
 #phone-center {
   z-index: 3;
-  height: 672px;
   width: 330px;
+  height: 672px;
 }
 
 #phone-left {
-  z-index: 1;
-  height: 632px;
-  width: 310px;
   top: 15px;
   left: 69px;
+  z-index: 1;
+  width: 310px;
+  height: 632px;
 }
 
 #phone-right {
-  z-index: 1;
-  height: 632px;
-  width: 310px;
   top: 15px;
   right: 69px;
+  z-index: 1;
+  width: 310px;
+  height: 632px;
 }
 
 #shadow {
-  z-index: 2;
+  position: absolute;
   top: 54px;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 2;
   width: 320px;
   height: 568px;
-  position: absolute;
-  box-shadow: 0 0 125px 0px black;
+  box-shadow: 0 0 125px 0 black;
 }
 
 a {
-  color: white;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -126,6 +126,6 @@ a.button:link {
 }
 
 a.button:hover {
-  font-size: 105%;
   padding: 17px 34px 17px 34px;
+  font-size: 105%;
 }
