--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html { height: 100%; }
 
 body {
-  font-family: 'Century Gothic';
+  font-family: 'Source Sans Pro', sans-serif;
   color: #fff;
   text-align: center;
   background-image: url(https://bankjoy.com/assets/images/backgrounds/background.jpg);
@@ -54,13 +54,15 @@ body {
 }
 
 #slogan {
+  margin-top: 40px;
   margin-bottom: 25px;
-  font-size: 48px;
+  font-size: 60px;
+  font-weight: 200;
 }
 
 #content {
   margin-bottom: 65px;
-  font-size: 12px;
+  font-size: 15px;
   text-transform: uppercase;
 }
 
