--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   color: #fff;
   text-align: center;
+  font-size: 18px;
   background-image: url(https://bankjoy.com/assets/images/backgrounds/background.jpg);
   background-position: top;
   background-repeat: no-repeat;
@@ -31,8 +32,9 @@ body {
 
 .lnr-phone-handset {
   position: relative;
-  top: 2px;
+  top: 4px;
   margin-right: 3px;
+  font-size: 18px;
 }
 
 .lnr-envelope {
@@ -61,7 +63,7 @@ body {
 }
 
 #content {
-  margin-bottom: 65px;
+  margin-bottom: 50px;
   font-size: 15px;
   text-transform: uppercase;
 }
@@ -111,15 +113,40 @@ a {
   text-decoration: none;
 }
 
-div.button { height: 90px; }
+div.button { margin-bottom: 60px; }
 
 a.button:link {
-  padding: 15px 32px 15px 32px;
+  padding: 15px 35px 15px 35px;
   background-color: #516FDD;
   border-radius: 50px;
 }
 
-a.button:hover {
-  padding: 17px 34px 17px 34px;
-  font-size: 105%;
+@-webkit-keyframes hvr-pop {
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+@keyframes hvr-pop {
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+.hvr-pop {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+}
+.hvr-pop:hover, .hvr-pop:focus, .hvr-pop:active {
+  -webkit-animation-name: hvr-pop;
+  animation-name: hvr-pop;
+  -webkit-animation-duration: .3s;
+  animation-duration: .3s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
